updating the inventory service

--- a/src/main/resources/application-local-discovery.properties
+++ b/src/main/resources/application-local-discovery.properties
@@ -1,2 +1,3 @@
-spring.cloud.discovery.enabled=true
-spring.zipkin.enabled=true
+spring.cloud.discovery.enabled=false
+spring.zipkin.enabled=false
+spring.cloud.config.enabled=false
