--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=inventory-service
 logging.level.guru.sfg.brewery=debug
 server.port=8082
-
+spring.config.import=optional:configserver:
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
 
